--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "postinstall": "tsc",
-    "watch-node": "nodemon dist/index.js",
-    "watch-ts": "npx tsc -w"
+    "start": "ts-node-dev --respawn --transpile-only --exit-child --watch src src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +21,7 @@
     "prisma": "^3.4.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "tsc": "^2.0.3",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "tsc": "^2.0.3"
   }
 }
