--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only --exit-child --watch src src/index.ts"
+    "start": "ts-node-dev --respawn --transpile-only --exit-child --watch src src/index.ts",
+    "build": "npx tsc --outDir dist",
+     "dev": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +23,6 @@
     "prisma": "^3.4.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4",
-    "tsc": "^2.0.3"
+    "typescript": "^4.4.4"
   }
 }
