--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only --exit-child --watch src src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --exit-child --watch src src/index.ts",
     "build": "npx tsc --outDir dist",
-     "dev": "node dist/index.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
